shenyu-examples/shenyu-examples-grpc/k8s/shenyu-examples-grpc.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: shenyu-ingress
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-examples-grpc-deployment
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-grpc
    all: shenyu-examples-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-examples-grpc
      all: shenyu-examples-grpc
  strategy: {}
  template:
    metadata:
      namespace: shenyu-ingress
      labels:
        app: shenyu-examples-grpc
        all: shenyu-examples-grpc
    spec:
      containers:
        - image: shenyu-examples-grpc
          name: shenyu-examples-grpc
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            exec:
              command:
                - /bin/sh
                - "-c"
                - wget -q -O - http://localhost:55290/grpc/actuator/health | grep UP || exit 1
          ports:
            - containerPort: 55290
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-examples-grpc-service
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-grpc
    all: shenyu-examples-grpc
spec:
  selector:
    app: shenyu-examples-grpc
    all: shenyu-examples-grpc
  type: NodePort
  ports:
    - name: "55290"
      port: 55290
      targetPort: 55290
      nodePort: 31183
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 31184
status:
  loadBalancer: {}
