shenyu-examples/shenyu-examples-grpc/k8s/ingress.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: shenyu-ingress
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-grpc-enabled: 'true'
    shenyu.apache.org/plugin-grpc-app-name: 127.0.0.1:38080
    shenyu.apache.org/plugin-context-path-path: /grpc
    shenyu.apache.org/plugin-grpc-path: /grpc/echo
    shenyu.apache.org/plugin-grpc-rpc-type: grpc
    shenyu.apache.org/plugin-grpc-service-name: echo.EchoService
    shenyu.apache.org/plugin-grpc-method-name: echo
    shenyu.apache.org/plugin-grpc-params-type: echo.EchoRequest,io.grpc.stub.StreamObserver
    shenyu.apache.org/plugin-grpc-rpc-expand: |
      {"timeout":5000,"methodType":"UNARY"}
spec:
  selector:
    app: shenyu-examples-grpc-service
  ports:
    - port: 38080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: shenyu-ingress
  labels:
    shenyu.apache.org/metadata-labels-1: echo
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-grpc-enabled: 'true'
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: shenyu-examples-grpc-service
                port:
                  number: 38080
            path: /grpc/
            pathType: Prefix
